se agrega el nodo plan de estudio y un nodo dummy para probar con RAG

--- a/datalab/nodosCheatados.ipynb
+++ b/datalab/nodosCheatados.ipynb
@@ -206,10 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "0f27dd9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jgome\\AppData\\Local\\Temp\\ipykernel_2468\\967007799.py:33: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  classifier_chain = LLMChain(\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import TypedDict\n",
     "from langgraph.graph import StateGraph, END\n",
@@ -238,7 +247,7 @@
     ")\n",
     "\n",
     "llm = ChatOpenAI(\n",
-    "    model=\"o4-mini\",\n",
+    "    model=\"gpt-4o\",\n",
     "    temperature=1,\n",
     "    openai_api_key=openai_api_key\n",
     ")\n",
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "61ee7933",
    "metadata": {},
    "outputs": [],
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "36338e35",
    "metadata": {},
    "outputs": [
@@ -271,7 +280,7 @@
        "{'input': 'quiero solo preguntar', 'text': 'modo libre'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "5f179c2c",
    "metadata": {},
    "outputs": [
@@ -500,12 +509,16 @@
       "Vamos a hacer un quiz para conocer tu nivel.\n",
       "\n",
       "--- Diagnóstico del agente ---\n",
-      "{\"nivel\":\"intermedio\",\"fortalezas\":[\"Desviación estándar\"],\"debilidades\":[\"Variables aleatorias\",\"Distribución binomial\"],\"detalle\":[{\"pregunta\":\"¿Qué es una variable aleatoria?\",\"respuesta\":\"una variable que puede tomar diferentes valores\",\"tema\":\"Variables aleatorias\",\"puntaje\":2,\"feedback\":\"Definición muy general: no menciona la relación con experimentos aleatorios ni la asignación de probabilidades.\"},{\"pregunta\":\"¿Qué es la desviación estándar?\",\"respuesta\":\"que tan alejados estan los datos de la media\",\"tema\":\"Desviación estándar\",\"puntaje\":4,\"feedback\":\"Buena descripción conceptual de la dispersión; se podrían añadir detalles formales como la raíz cuadrada de la varianza.\"},{\"pregunta\":\"¿Qué es una distribución binomial?\",\"respuesta\":\"una distribuccion que se base en que los acontecimientos son exito o frcaso, 0 o 1\",\"tema\":\"Distribuciones avanzadas\",\"puntaje\":2,\"feedback\":\"Identifica el carácter binario; falta mencionar el número de ensayos, la función de masa de probabilidad y el parámetro de probabilidad de éxito.\"}]}\n",
+      "{\"nivel\":\"basico\",\"fortalezas\":[],\"debilidades\":[\"Variables aleatorias\",\"Estadística descriptiva\",\"Teorema de Bayes\"],\"detalle\":[{\"pregunta\":\"¿Qué es una variable aleatoria?\",\"respuesta\":\"c\",\"tema\":\"Variables aleatorias\",\"puntaje\":0,\"feedback\":\"No se proporciona ninguna definición ni explicación; la respuesta es inválida.\"},{\"pregunta\":\"¿Qué es la media aritmética?\",\"respuesta\":\"c\",\"tema\":\"Estadística descriptiva\",\"puntaje\":0,\"feedback\":\"No se responde la pregunta, solo se indica una letra sin contenido conceptual.\"},{\"pregunta\":\"Explica el teorema de Bayes con un ejemplo.\",\"respuesta\":\"c\",\"tema\":\"Teorema de Bayes\",\"puntaje\":0,\"feedback\":\"No hay explicación ni ejemplo; la respuesta es completamente incompleta.\"}]}\n",
+      "\n",
+      "Nivel detectado: basico\n",
+      "Fortalezas: []\n",
+      "Debilidades: ['Variables aleatorias', 'Estadística descriptiva', 'Teorema de Bayes']\n",
       "\n",
       "Resumen final:\n",
-      "Nivel: \n",
-      "Fortalezas: ['']\n",
-      "Debilidades: ['']\n"
+      "Nivel: basico\n",
+      "Fortalezas: []\n",
+      "Debilidades: ['Variables aleatorias', 'Estadística descriptiva', 'Teorema de Bayes']\n"
      ]
     }
    ],
@@ -787,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "99d5dc81",
    "metadata": {},
    "outputs": [
@@ -797,26 +810,35 @@
      "text": [
       "\n",
       "Plan de estudio personalizado:\n",
-      "1. Probabilidad condicional  \n",
-      "   • Repaso de definiciones y propiedades  \n",
-      "   • Ley de probabilidades totales y ejercicios prácticos  \n",
+      "Plan de estudio (3 temas grandes)\n",
       "\n",
-      "2. Distribuciones de probabilidad  \n",
-      "   • Discretas (Binomial, Poisson) y continuas (Normal, Exponencial)  \n",
-      "   • Funciones de masa/densidad, esperanza y varianza  \n",
+      "1. Probabilidad condicional y Teorema de Bayes  \n",
+      "   • Definición de probabilidad condicional  \n",
+      "   • Regla de la cadena y teorema de la probabilidad total  \n",
+      "   • Enunciado y demostración de Bayes  \n",
+      "   • Ejercicios con árboles y tablas de contingencia  \n",
       "\n",
-      "3. Teorema de Bayes  \n",
-      "   • Formulación y vínculo con la ley de probabilidades totales  \n",
-      "   • Aplicaciones reales: diagnósticos médicos, clasificación de eventos\n"
+      "2. Distribuciones y medidas de tendencia central  \n",
+      "   • Distribuciones discretas (Binomial, Poisson) y continuas (Normal, Exponencial)  \n",
+      "   • Función de densidad/masa, media y varianza  \n",
+      "   • Cálculo e interpretación de media, mediana y moda  \n",
+      "   • Relación entre forma de la distribución y medidas de tendencia  \n",
+      "\n",
+      "3. Regresión lineal y análisis de relaciones  \n",
+      "   • Modelo de regresión simple: estimación de coeficientes por MCO  \n",
+      "   • Interpretación de pendiente, ordenada al origen y coeficiente de determinación (R²)  \n",
+      "   • Supuestos básicos (linealidad, homocedasticidad, normalidad de errores)  \n",
+      "   • Validación del modelo y predicción  \n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Estado at 0x144b9c8f200>"
+       "<__main__.Estado at 0x26ab06989d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,13 +862,13 @@
     "Eres un tutor experto en estadística y probabilidad.\n",
     "El estudiante tiene el nivel: {nivel}.\n",
     "Sus debilidades principales son: {debilidades}.\n",
-    "Crea un plan de estudio personalizado de exactamente 3 temas o pasos, enfocados en esas debilidades.\n",
+    "Crea un plan de estudio personalizado de exactamente 3 temas grandes, enfocados en esas debilidades.\n",
     "Enumera los temas de forma clara y breve.\n",
     "\"\"\"\n",
     ")\n",
     "\n",
     "# Instancia del LLM (ajusta el modelo según tu entorno)\n",
-    "llm = ChatOpenAI(model=\"o4-mini-2025-04-16\", temperature=1)\n",
+    "llm = ChatOpenAI(model=\"o4-mini\", temperature=1)\n",
     "\n",
     "# Chain para generar el plan\n",
     "chain = LLMChain(llm=llm, prompt=prompt)\n",
@@ -864,22 +886,114 @@
     "    return state\n",
     "\n",
     "# Prueba aislada\n",
-    "estado_prueba = Estado(nivel=\"intermedio\", debilidades=[\"probabilidad condicional\", \"distribuciones\", \"teorema de Bayes\"])\n",
+    "estado_prueba = Estado(nivel=\"intermedio\", debilidades=[\"probabilidad condicional\", \"distribuciones\", \"teorema de Bayes\",\"medidad de tendencia central\", \"regresiones\"])\n",
     "nodo_plan_estudio(estado_prueba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7a7df9f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prompt_plan = ChatPromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "Eres un tutor experto en estadística y probabilidad.\n",
+    "El estudiante tiene el nivel: {nivel}.\n",
+    "Sus debilidades principales son: {debilidades}.\n",
+    "\n",
+    "Crea un plan de estudio personalizado siguiendo EXACTAMENTE este formato:\n",
+    "\n",
+    "Plan de estudio (3 temas grandes)\n",
+    "\n",
+    "1. [Nombre del Tema 1]\n",
+    "   • [Subtema 1.1]\n",
+    "   • [Subtema 1.2]\n",
+    "   • [Subtema 1.3]\n",
+    "   • [Subtema 1.4]\n",
+    "\n",
+    "2. [Nombre del Tema 2]\n",
+    "   • [Subtema 2.1]\n",
+    "   • [Subtema 2.2]\n",
+    "   • [Subtema 2.3]\n",
+    "   • [Subtema 2.4]\n",
+    "\n",
+    "3. [Nombre del Tema 3]\n",
+    "   • [Subtema 3.1]\n",
+    "   • [Subtema 3.2]\n",
+    "   • [Subtema 3.3]\n",
+    "   • [Subtema 3.4]\n",
+    "\n",
+    "Los temas deben enfocarse en las debilidades mencionadas.\n",
+    "Cada tema debe tener exactamente 4 subtemas.\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "def parse_plan(texto):\n",
+    "    \"\"\"Función para parsear la respuesta y extraer temas y subtemas\"\"\"\n",
+    "    temas = {}\n",
+    "    tema_actual = None\n",
+    "\n",
+    "    for linea in texto.split('\\n'):\n",
+    "        linea = linea.strip()\n",
+    "        if linea.startswith(('1.', '2.', '3.')):\n",
+    "            tema_actual = linea[3:].strip()\n",
+    "            temas[tema_actual] = []\n",
+    "        elif linea.startswith('•'):\n",
+    "            if tema_actual:\n",
+    "                temas[tema_actual].append(linea[2:].strip())\n",
+    "\n",
+    "    return temas\n",
+    "\n",
+    "def nodo_plan_estudio(state: Estado) -> Estado:\n",
+    "    debilidades_str = \", \".join(state.debilidades)\n",
+    "    chain = prompt_plan | llm\n",
+    "    respuesta = chain.run(nivel=state.nivel, debilidades=debilidades_str)\n",
+    "\n",
+    "    # Parsear la respuesta\n",
+    "    temas_subtemas = parse_plan(respuesta)\n",
+    "\n",
+    "    # Actualizar el estado\n",
+    "    state.temas = list(temas_subtemas.keys())\n",
+    "    state.subtemas = temas_subtemas\n",
+    "    state.tema_actual = 0\n",
+    "\n",
+    "    print(\"\\nPlan de estudio personalizado:\")\n",
+    "    print(respuesta)\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1dac22fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tema_ejemplo = \"Probabilidad condicional y Teorema de Bayes\"\n",
+    "subtemas_ejemplo = [\n",
+    "    \"Definición de probabilidad condicional\",\n",
+    "    \"Regla de la cadena y teorema de la probabilidad total\",\n",
+    "    \"Enunciado y demostración de Bayes\",\n",
+    "    \"Ejercicios con árboles y tablas de contingencia\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718854e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parseplan = parse_plan("
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -893,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
