actualizacion metodo de uso  prompt + template nodo clasificacion

--- a/datalab/nodos.ipynb
+++ b/datalab/nodos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a7a2691c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "d690d5bb",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "cb169295",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b2b384ca",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "787a9efe",
    "metadata": {},
    "outputs": [],
@@ -131,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "390d196f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Una variable aleatoria es un concepto de probabilidad que sirve para modelar cuantitativamente el azar. De forma más precisa:\\n\\n1. Espacio muestral (Ω): conjunto de todos los posibles resultados de un experimento aleatorio (por ejemplo, caras o cruces al lanzar una moneda, o los valores de un dado).\\n\\n2. Variable aleatoria (X): función que asigna a cada resultado ω∈Ω un número real X(ω). Ese número es la “observación” o “valor” que toma la variable cuando ocurre ω.\\n\\nTipos principales  \\n• Discreta: toma un conjunto contable de valores (por ejemplo, X = número de caras al lanzar 3 monedas: {0,1,2,3}). Se describe por su función de masa de probabilidad pX(k)=P(X=k).  \\n• Continua: puede tomar cualquier valor en uno o varios intervalos de la recta. Se describe por su función de densidad fX(x), de modo que P(a≤X≤b)=∫ab fX(x)dx.\\n\\nFunciones asociadas  \\n- Función de distribución acumulada (FDA): FX(x)=P(X≤x).  \\n- Media o esperanza: E[X]=∑k k·pX(k) (discreto) ó ∫ x·fX(x)dx (continuo).  \\n- Varianza: Var(X)=E[(X–E[X])²], mide la dispersión.\\n\\nEjemplo sencillo  \\nLanzar un dado justo:  \\n• Ω={1,2,3,4,5,6}  \\n• X(ω)=ω  \\n• pX(k)=1/6 para k=1,…,6  \\n– Esperanza E[X]=3.5  \\n– Var(X)=35/12\\n\\nEn resumen, una variable aleatoria traduce resultados de un experimento incierto en valores numéricos, permitiendo así construir y estudiar modelos probabilísticos.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 549, 'prompt_tokens': 13, 'total_tokens': 562, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 128, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'o4-mini-2025-04-16', 'system_fingerprint': None, 'id': 'chatcmpl-BOGxTtSTM5rQhzenRBzOyNJ5ApYvI', 'finish_reason': 'stop', 'logprobs': None}, id='run-d25c65ed-58c4-4982-85d3-5c584849df72-0', usage_metadata={'input_tokens': 13, 'output_tokens': 549, 'total_tokens': 562, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 128}})"
+       "AIMessage(content='En teoría de la probabilidad una **variable aleatoria** es, en términos sencillos, una regla (o función) que asigna un número real a cada resultado posible de un experimento aleatorio.  \\n\\n1. Definición formal  \\n   Sea Ω el espacio muestral (el conjunto de todos los resultados posibles de un experimento). Una variable aleatoria X es una función  \\n   X: Ω → ℝ  \\n   de modo que a cada ω∈Ω (cada posible “suceso elemental”) le asigna un valor real X(ω).\\n\\n2. Por qué «aleatoria»  \\n   El adjetivo “aleatoria” no significa que X cambie arbitrariamente, sino que antes de hacer el experimento no sabemos qué valor tomará; su valor queda determinado por el resultado del experimento.\\n\\n3. Tipos principales  \\n   a) Discreta  \\n      • Toma un conjunto contable de valores (por ejemplo {0,1,2,…}).  \\n      • Se describe por su función de masa de probabilidad pX(k)=P(X=k).  \\n      Ejemplo: lanzar un dado justo y definir X = número de puntos obtenido (X∈{1,2,3,4,5,6}).  \\n   b) Continua  \\n      • Toma valores en un intervalo (o unión de intervalos) de ℝ.  \\n      • Se describe por su función de densidad fX(x), de modo que  \\n        P(a ≤ X ≤ b) = ∫[a,b] fX(x) dx.  \\n      Ejemplo: la altura de una persona adulta, modelada (aproximadamente) con una distribución normal.\\n\\n4. Funciones asociadas  \\n   • Función de distribución acumulada (FDA):  \\n     FX(x) = P(X ≤ x).  \\n   • Esperanza o valor esperado:  \\n     E[X] = ∑k k·pX(k)   (discreta)  \\n     E[X] = ∫ x·fX(x) dx  (continua)  \\n   • Varianza:  \\n     Var(X) = E[(X – E[X])²].\\n\\n5. ¿Para qué sirve?  \\n   Las variables aleatorias permiten cuantificar y manejar matemáticamente la incertidumbre. Con ellas se modelan fenómenos tan diversos como el número de llamadas telefónicas que llegan en una hora, la vida útil de un componente electrónico, resultados de exámenes, oscilaciones del mercado financiero, etc.\\n\\nEn resumen: una variable aleatoria es la forma de asociar numéricamente cada resultado de un experimento incierto, de modo que podamos describir y calcular probabilidades y estadísticas sobre esos números.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 831, 'prompt_tokens': 13, 'total_tokens': 844, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 256, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'o4-mini-2025-04-16', 'system_fingerprint': None, 'id': 'chatcmpl-BOOqZqAO1CSPKjaeOu2oSE9JfGp2S', 'finish_reason': 'stop', 'logprobs': None}, id='run-d978966d-bc21-4890-a1a0-9bab9dad9c7c-0', usage_metadata={'input_tokens': 13, 'output_tokens': 831, 'total_tokens': 844, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 256}})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "id": "42459a49",
    "metadata": {},
    "outputs": [],
@@ -180,14 +180,17 @@
     "    user_input = state[\"user_input\"]\n",
     "    if not user_input:\n",
     "            return {\"modo\": \"\"}\n",
-    "    prompt = (\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\",\n",
     "        \"Clasifica la siguiente intención del usuario SOLO como 'guiado' o 'libre'. \"\n",
     "        \"Si el usuario quiere que lo guíes paso a paso, responde 'guiado'. \"\n",
     "        \"Si solo quiere una respuesta directa, responde 'libre'. \"\n",
-    "        f\"Intención del usuario: {user_input}\\n\"\n",
-    "        \"Respuesta:\"\n",
-    "    )\n",
-    "    respuesta = llm.invoke(prompt).content.strip().lower()\n",
+    "        \"Intención del usuario: {user_input}\\n\"\n",
+    "        \"Respuesta:\")\n",
+    "    ])\n",
+    "    #respuesta = llm.invoke(prompt).content.strip().lower()\n",
+    "    llm_chain = prompt | llm\n",
+    "    respuesta = llm_chain.invoke({\"user_input\": user_input}).content.strip().lower()\n",
     "    if \"guiado\" in respuesta:\n",
     "        modo = \"guiado\"\n",
     "    elif \"libre\" in respuesta:\n",
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "id": "90c4ce2d",
    "metadata": {},
    "outputs": [],
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "id": "14f47534",
    "metadata": {},
    "outputs": [
@@ -224,7 +227,7 @@
        "{'modo': 'guiado'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,24 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "2d074c95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = JsonOutputParser()\n",
-    "chain_quiz = prompt_quiz | llm | parser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "66043a7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# nodo\n",
     "def nodo_calificar(state):\n",
+    "    parser = JsonOutputParser()\n",
+    "    chain_quiz = prompt_quiz | llm | parser\n",
+    "    \n",
     "    respuestas = state.get(\"respuestas\", [])\n",
     "    preguntas_seleccionadas = state.get(\"preguntas_seleccionadas\", [])\n",
     "    respuestas_usuario = []\n",
